feat: add checking for cyclic dependencies
