# docs/spec/api/tasks/services.swagger.json
@@ -80,6 +80,39 @@
         ]
       }
     },
+    "/api/v1/get_all_dependencies": {
+      "post": {
+        "summary": "GetAllDependencies fetches all (direct and indirect) dependencies\nof tasks.",
+        "operationId": "TaskService_GetAllDependencies",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/tasksGetAllDependenciesResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/tasksGetAllDependenciesRequest"
+            }
+          }
+        ],
+        "tags": [
+          "TaskService"
+        ]
+      }
+    },
     "/api/v1/get_tasks": {
       "post": {
         "operationId": "TaskService_GetTasks",
@@ -146,6 +179,18 @@
     }
   },
   "definitions": {
+    "GetAllDependenciesResponseIdArray": {
+      "type": "object",
+      "properties": {
+        "ids": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "format": "int64"
+          }
+        }
+      }
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -241,6 +286,29 @@
     },
     "tasksDeleteTasksResponse": {
       "type": "object"
+    },
+    "tasksGetAllDependenciesRequest": {
+      "type": "object",
+      "properties": {
+        "ids": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "format": "int64"
+          }
+        }
+      }
+    },
+    "tasksGetAllDependenciesResponse": {
+      "type": "object",
+      "properties": {
+        "dependenciesById": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/GetAllDependenciesResponseIdArray"
+          }
+        }
+      }
     },
     "tasksGetTasksRequest": {
       "type": "object",
